# en-red-manager-ai

./: .gitignore  NICEGUI_RUN.md  README.md  mejoras.md  pyproject.toml
.codex/skills/conversation-research/: SKILL.md
.codex/skills/docs-maintainer/: SKILL.md
.codex/skills/work-log-maintainer/: SKILL.md
api/: main.py  routes.py
config/: dev-no-api.toml  dev-ui-llm.toml  dev.toml  prod.toml.example  reference.toml  service-catalog.md
docs/: chatbot_llm_workflow_report.html  chatbot_research.md  chatbot_workflow_report.html  configuration.md  conversation_workflow_roadmap.md  current_documentation_index.md  overview.md  project_overview.md  qualification-deep-research-report.md
docs/knowledge/: README.md  active-context.md  chatbot-behavior.md  implementation-architecture.md  message-flow-diagram.html  message-flow-diagram.md  project-map.md  update-process.md  work-log.md
nice_gui_app/: __init__.py  main.py  view_models.py
scripts/: generate_conversation_research.py  reorganize_source_data.py
src/manager_ai/: config.py
src/manager_ai/agent/: __init__.py  agent.py  prompts.py  tracked_agent.py  workflow_agent.py
src/manager_ai/models/: client.py  conversation.py  extraction.py
src/manager_ai/ports/: conversation_reply.py  conversation_repository.py  extractor.py  llm.py  message_classifier.py  messaging.py  qualification.py  quote_drafting.py  reminder.py  scheduling.py  storage.py  structured_extraction.py
src/manager_ai/services/: collection.py  (+9 more)
tests/integration/: test_mlflow_claude_adapter.py  test_mlflow_instructor.py  test_mlflow_manual.py
(+51 files in other folders)
