[project]
name = "manager-ai"
version = "0.1.0"
description = "AI agent for first contact with clients via WhatsApp — En Red Rosario"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.46.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "toml>=0.10.2",
    "python-dotenv>=1.0.0",
    "pydantic-ai[anthropic]>=0.0.14",
    "instructor>=1.7.0",
    "mlflow>=2.19.0",
    "nicegui>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manager_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
